[gd_scene load_steps=18 format=2]

[ext_resource path="res://TitleScene/button_hover-press-focus.tres" type="StyleBox" id=1]
[ext_resource path="res://TitleScene/button_normal.tres" type="StyleBox" id=2]
[ext_resource path="res://TitleScene/button_regular_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://MapPieces/test_walls/1_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://MapPieces/test_walls/1_0.tscn" type="PackedScene" id=5]
[ext_resource path="res://MapPieces/test_walls/1_5.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameBoard/GameBoard_env.tscn" type="PackedScene" id=7]
[ext_resource path="res://MapPieces/test_walls/stone_floor.tres" type="Material" id=8]
[ext_resource path="res://TitleScene/button_hover_tip.gd" type="Script" id=9]
[ext_resource path="res://TitleScene/Title.gd" type="Script" id=10]
[ext_resource path="res://Items/gold_box.tscn" type="PackedScene" id=11]
[ext_resource path="res://Items/purple_box.tscn" type="PackedScene" id=12]
[ext_resource path="res://Items/red_box.tscn" type="PackedScene" id=13]
[ext_resource path="res://TitleScene/SizeSelector.gd" type="Script" id=14]
[ext_resource path="res://TitleScene/ComplexitySelector.gd" type="Script" id=15]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 4
outline_color = Color( 0, 0, 0, 0.262745 )
font_data = SubResource( 1 )

[node name="Title" type="Spatial"]
script = ExtResource( 10 )

[node name="GameBoard_env" parent="." instance=ExtResource( 7 )]

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_right = -256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
margin_top = 48.0
margin_right = 512.0
margin_bottom = 148.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]ENIGMATA"
text = "ENIGMATA"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_left = 64.0
margin_top = 128.0
margin_right = 448.0
margin_bottom = 408.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap" type="ColorRect" parent="Menu/Buttons"]
margin_right = 384.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
color = Color( 1, 1, 1, 0 )

[node name="Desktop" type="Button" parent="Menu/Buttons"]
margin_top = 62.0
margin_right = 384.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "Enter Maze (Desktop)"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VR" type="Button" parent="Menu/Buttons"]
margin_top = 124.0
margin_right = 384.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "Enter Maze (SteamVR)"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
EnableOnState = 0

[node name="Difficulty" type="VBoxContainer" parent="Menu/Buttons"]
margin_top = 186.0
margin_right = 384.0
margin_bottom = 250.0
alignment = 1

[node name="MazeSize" type="HBoxContainer" parent="Menu/Buttons/Difficulty"]
margin_right = 384.0
margin_bottom = 28.0
alignment = 1
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/Buttons/Difficulty/MazeSize"]
margin_left = 73.0
margin_right = 73.0
margin_bottom = 28.0
color = Color( 0.521569, 0.219608, 0.592157, 0.756863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Menu/Buttons/Difficulty/MazeSize/ColorRect"]
margin_right = 239.0
margin_bottom = 28.0
rect_min_size = Vector2( 128, 28 )
color = Color( 0.713726, 0.486275, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Buttons/Difficulty/MazeSize"]
margin_left = 77.0
margin_top = 3.0
margin_right = 179.0
margin_bottom = 25.0
rect_min_size = Vector2( 102, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Size:"
align = 2

[node name="Less" type="Button" parent="Menu/Buttons/Difficulty/MazeSize"]
margin_left = 183.0
margin_right = 205.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "<"
flat = true

[node name="Size" type="Label" parent="Menu/Buttons/Difficulty/MazeSize"]
margin_left = 209.0
margin_top = 3.0
margin_right = 284.0
margin_bottom = 25.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = ExtResource( 3 )
text = "10 x 10"
align = 1

[node name="More" type="Button" parent="Menu/Buttons/Difficulty/MazeSize"]
margin_left = 288.0
margin_right = 310.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = ">"
flat = true

[node name="MazeComplexity2" type="HBoxContainer" parent="Menu/Buttons/Difficulty"]
margin_top = 32.0
margin_right = 384.0
margin_bottom = 60.0
alignment = 1
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Menu/Buttons/Difficulty/MazeComplexity2"]
margin_left = 73.0
margin_right = 73.0
margin_bottom = 28.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Menu/Buttons/Difficulty/MazeComplexity2/ColorRect2"]
margin_right = 239.0
margin_bottom = 28.0
rect_min_size = Vector2( 128, 28 )
color = Color( 0.713726, 0.486275, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Buttons/Difficulty/MazeComplexity2"]
margin_left = 77.0
margin_top = 3.0
margin_right = 179.0
margin_bottom = 25.0
rect_min_size = Vector2( 10.2, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Complexity:"
align = 2

[node name="Less" type="Button" parent="Menu/Buttons/Difficulty/MazeComplexity2"]
margin_left = 183.0
margin_right = 205.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "<"
flat = true

[node name="Size" type="Label" parent="Menu/Buttons/Difficulty/MazeComplexity2"]
margin_left = 209.0
margin_top = 3.0
margin_right = 284.0
margin_bottom = 25.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = ExtResource( 3 )
text = "MEDIUM"
align = 1

[node name="More" type="Button" parent="Menu/Buttons/Difficulty/MazeComplexity2"]
margin_left = 288.0
margin_right = 310.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = ">"
flat = true

[node name="MazeComplexity" type="HBoxContainer" parent="Menu/Buttons/Difficulty"]
margin_top = 64.0
margin_right = 384.0
margin_bottom = 64.0

[node name="Gap2" type="ColorRect" parent="Menu/Buttons"]
margin_top = 280.0
margin_right = 384.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 32 )
color = Color( 1, 1, 1, 0 )

[node name="Viewer" type="Button" parent="Menu/Buttons"]
margin_top = 342.0
margin_right = 384.0
margin_bottom = 374.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "View Map"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
EnableOnState = 2

[node name="MapCode" type="ColorRect" parent="Menu/Buttons/Viewer"]
margin_left = 32.0
margin_top = 48.0
margin_right = 352.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 32 )
color = Color( 0.713726, 0.486275, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Menu/Buttons/Viewer/MapCode"]
margin_left = 8.0
margin_top = 10.0
margin_right = 88.0
margin_bottom = 26.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_text = "MAP CODE:"
text = "MAP CODE:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="LineEdit" parent="Menu/Buttons/Viewer/MapCode"]
margin_left = 88.0
margin_top = 2.0
margin_right = 318.0
margin_bottom = 30.0
placeholder_text = "Leave blank for a new maze"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 4.69615, 1, -2.86602 )

[node name="Facade" type="Spatial" parent="."]

[node name="Gold Box" parent="Facade" instance=ExtResource( 11 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 1.76915, 4, -4.82035 )

[node name="Red Box" parent="Facade" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.97255, 8.02097, -8.3247 )

[node name="Purple Box" parent="Facade" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.75626, 6.30571, -4.33145 )

[node name="1_2" parent="Facade" instance=ExtResource( 6 )]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, -0.5, 0, -5.86602 )

[node name="1_4" parent="Facade" instance=ExtResource( 6 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -1.9641, 0, -11.3301 )

[node name="1_5" parent="Facade" instance=ExtResource( 6 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -5.9641, 0, -4.40192 )

[node name="1_1" parent="Facade" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0.964101, 0, -0.401923 )

[node name="1_6" parent="Facade" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 4.9641, 0, -7.33013 )

[node name="1_3" parent="Facade" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -3.9641, 0, -7.86602 )

[node name="1_0" parent="Facade" instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 2.9641, 0, -3.86603 )

[node name="CSGBox" type="CSGBox" parent="Facade"]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -0.5, -1, -5.86602 )
use_collision = true
width = 14.0
depth = 12.0
material = ExtResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.965926, -0.12941, 0.224144, 0, 0.866025, 0.5, -0.258819, -0.482963, 0.836516, 0, 3, 0 )
shadow_enabled = true
directional_shadow_split_1 = 0.078
directional_shadow_normal_bias = 0.0

[node name="GIProbe" type="GIProbe" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[connection signal="pressed" from="Menu/Buttons/Desktop" to="." method="_on_Desktop_pressed"]
[connection signal="pressed" from="Menu/Buttons/VR" to="." method="_on_VR_pressed"]
[connection signal="pressed" from="Menu/Buttons/Difficulty/MazeSize/Less" to="Menu/Buttons/Difficulty/MazeSize" method="_on_Less_pressed"]
[connection signal="pressed" from="Menu/Buttons/Difficulty/MazeSize/More" to="Menu/Buttons/Difficulty/MazeSize" method="_on_More_pressed"]
[connection signal="pressed" from="Menu/Buttons/Difficulty/MazeComplexity2/Less" to="Menu/Buttons/Difficulty/MazeComplexity2" method="_on_Less_pressed"]
[connection signal="pressed" from="Menu/Buttons/Difficulty/MazeComplexity2/More" to="Menu/Buttons/Difficulty/MazeComplexity2" method="_on_More_pressed"]
[connection signal="pressed" from="Menu/Buttons/Viewer" to="." method="_on_Viewer_pressed"]
